secondfile/objects/RDS_VPN_Data__c.object
<CustomObject>
    <fields>
        <fullName>Circuit_and_VLAN_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VPN Data</description>
        <label>RDS-Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipLabel>RDS-VPN Data</relationshipLabel>
        <relationshipName>RDS_VPN_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Version_on_premise__c</fullName>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.Current_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Version on premise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multicast_Type__c</fullName>
        <description>Premise Details-Premise Data-Curcuit and VLAN Details-VPN Data-Multicast-Mutlicast Type</description>
        <label>Multicast Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VPN Data-Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topology__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VPN Data-Topology</description>
        <label>Topology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Premise_Number__c</fullName>
        <description>This is technical field to capture Premise Number on VPN record. This is not required on page layout.</description>
        <formula>Circuit_and_VLAN_Details__r.CVLAN_Premise_Number__c</formula>
        <label>VPN Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e2eVPNkey__c</fullName>
        <label>e2eVPNkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-VPN Data</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>RDS-VPN Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-VPN Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Lapsed</fullName>
        <active>true</active>
        <description>RDS Edit Lapsed</description>
        <errorConditionFormula>AND(OR(if(Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),true,false),ISPICKVAL( Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
                $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;, 
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_VPN</fullName>
        <active>true</active>
        <errorConditionFormula>Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; 
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_VPN</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-VPN Data  record.</errorMessage>
    </validationRules>
</CustomObject>